ChangeLog for pommed
--------------------

version 1.19:
	- pommed: get rid of the libsmbios dependency on Intel machines.
	- gpomme: integrate config file monitoring and DBus messaging into
	the main loop. Get rid of the 10 times per second polling.
	- pommed: new event loop.
	- pommed: convert power, kbd and dbus to timers integrated into
	the event loop.

version 1.18:
	- pommed: add more IDs for Apple external keyboards
	- pommed: relax event devices identification for internal keyboard.

version 1.17:
	- pommed: handle path change for the applesmc led interface
	starting with kernel 2.6.25.

version 1.16:
	- pommed: add support for the MacBookPro4,1.
	- pommed: add support for the MacBook4,1.
	- pommed: add support for the WellSpring keyboard+trackpad
	assembly ("MultiTouch"), found in the MacBookAir1,1.
	- pommed: add support for the WellSpring II keyboard+trackpad
	assembly ("MultiTouch"), most likely found in the MacBookPro4,1.
	- pommed: fix MacBook Air machine identification string, the real
	string is MacBookAir1,1 and not MacBook Air1,1 as the Apple
	technote puts it.

version 1.15:
	- pommed: add preliminary support for the MacBook Air1,1; USB IDs
	missing.
	- pommed: add support for power_supply class to the ACPI code.

version 1.14:
	- pommed: fix error handling in the audio sample loading code to
	properly report failure, preventing nasty segfaults later on in
	case the sound file is not available.
	- pommed: make goutte.wav the default beep sound, add click.wav
	and remove the KDE beep sound.

version 1.13:
	- pommed: add an option to disable the beep on volume change.
	- pommed: add the videoSwitch DBus notification.
	- wmpomme: add video switch support.
	- gpomme: add video switch support.
	- pommed: add support for LCD backlight control on the Intel 965GM
	found in the MacBook3,1.
	- pommed: rework the inotify code to handle several events at once
	and to handle events with long filenames (longer than